--- a/Volatility Models.ipynb
+++ b/Volatility Models.ipynb
@@ -130,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the above plot, we can see that the returns are stationary throughout time. The variance of the returns during the first half of 2020 is much greater than the average volatility. Such a condition is called heteroscedasticity. Models predicting returns assuming constant variance throughout time will be incorrect and predictions given by those models will be invalid. Therefore we use models which assume the variance changes throughout time to forecast the variance."
+    "From the above plot, we can see that the returns are not stationary throughout time. The variance of the returns during the first half of 2020 is much greater than the average volatility. Such a condition is called heteroscedasticity. Models predicting returns assuming constant variance throughout time will be incorrect and predictions given by those models will be invalid. Therefore we use models which assume the variance changes throughout time to forecast the variance."
    ]
   },
   {
